kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "${NGINX_INTERNAL_ADDR}"
spec:
  ingressClassName: internal
  rules:
    - host: &host emqx.${SECRET_INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - *host
